--- a/src/daddy.html
+++ b/src/daddy.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
- <head>
-    <title>Pigeon in the gew</title>
- </head>
- <body>
+<html>
+   <head>
 
-    <h1>Pigeon in the stew</h1>
+      <title>ShipDaddy.com</title>
 
-    <p>There are days for you. Then there are days against you.
-        You need to walk a fine line in order to make a living.
-    </p>
- </body>
+   </head>
+
+   <body>
+
+      <h1>Ship Daddy</h1>
+
+      <a href="https://google.com">MENU</a>
+
+      <br>
+
+      <a href="www.">ORDER</a>
+
+      <br>
+      <a href="">TRACK</a>
+
+      <br>
+
+      <a href="">MESSAGE</a>
+
+   </body>
+
+
+</html>
