--- a/src/daddy.html
+++ b/src/daddy.html
@@ -10,11 +10,11 @@
 
       <h1>Ship Daddy</h1>
 
-      <a href="https://google.com">MENU</a>
+      <a href="C:\Projects\SHIP-DADDY\src\html_links\menu.html">MENU</a>
 
       <br>
 
-      <a href="www.">ORDER</a>
+      <a href="http://www.google.com">ORDER</a>
 
       <br>
       <a href="">TRACK</a>
