fix menu hyperlink-incomplete

--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -10,7 +10,7 @@
 
       <h1>Ship Daddy</h1>
 
-      <a href="C:\Projects\SHIP-DADDY\src\html_links\menu.html">MENU</a>
+      <a href="C:\\Projects\\SHIP-DADDY\\src\\html_links\\menu.html">MENU</a>
 
       <br>
 
