--- a/src/html_links/menu.html
+++ b/src/html_links/menu.html
@@ -1,15 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head>
-
-        <title>MENU:</title>
-
-    </head>
-
     <body>
-
-        <li>Donkey</li>
-        <li>ELelphant</li>
-
+        <li>Shoes</li>
+        <li>Food</li>
+        <li>Shirt</li>
     </body>
 </html>
