--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -10,11 +10,11 @@
 
       <h1>Ship Daddy</h1>
 
-      <a href="C:\\Projects\\SHIP-DADDY\\src\\html_links\\menu.html">MENU</a>
+      <a href="file:///C:\Projects\SHIP-DADDY\src\html_links\menu.html">MENU</a>
 
       <br>
 
-      <a href="http://www.google.com">ORDER</a>
+      <a href="file:///C:\Projects\SHIP-DADDY\src\html_links\order.html">ORDER</a>
 
       <br>
       <a href="">TRACK</a>
