--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -17,11 +17,7 @@
       <a href="file:///C:\Projects\SHIP-DADDY\src\html_links\order.html">ORDER</a>
 
       <br>
-      <a href="">TRACK</a>
-
-      <br>
-
-      <a href="">MESSAGE</a>
+      <a href="file:///C:\Projects\SHIP-DADDY\src\html_links\track.html">TRACK</a>
 
    </body>
 
