--- a/src/html_links/order.html
+++ b/src/html_links/order.html
@@ -2,5 +2,10 @@
 <html>
     <head>
         <h1>Order</h1>
+
+        <p>Here the user can place an order. Please choose the item
+           and click on the add cart button. Then review the cart and
+           click on submit. This will add the items into the db.  
+        </p>
     </head>
 </html>
