--- a/src/html_links/order.html
+++ b/src/html_links/order.html
@@ -8,4 +8,12 @@
            click on submit. This will add the items into the db.  
         </p>
     </head>
+
+    <body>
+        <ul>
+            <li>shoes</li>
+            <li>food</li>
+            <li>boxers</li>
+        </ul>
+    </body>
 </html>
