--- a/src/html_links/track.html
+++ b/src/html_links/track.html
@@ -2,5 +2,9 @@
 <html>
     <head>
         <h1>TRACK</h1>
+
+        <p>This contains information regarding the tracking of the packages.
+            It will require a token to enter this site.
+        </p>
     </head>
 </html>
