--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -9,15 +9,22 @@
    <body>
 
       <h1>Ship Daddy</h1>
+      <div style="text-align:center">
+         <a href="file:///C:\Projects\SHIP-DADDY\src\html_links\menu.html">MENU</a>
+      </div>
 
-      <a href="file:///C:\Projects\SHIP-DADDY\src\html_links\menu.html">MENU</a>
+      <br>
+
+      <div style="text-align:center">
+         <a href="file:///C:\Projects\SHIP-DADDY\src\html_links\order.html">ORDER</a>
+      </div>
+
 
       <br>
 
-      <a href="file:///C:\Projects\SHIP-DADDY\src\html_links\order.html">ORDER</a>
-
-      <br>
-      <a href="file:///C:\Projects\SHIP-DADDY\src\html_links\track.html">TRACK</a>
+      <div style="text-align: center">
+         <a href="file:///C:\Projects\SHIP-DADDY\src\html_links\track.html">TRACK</a>
+      </div>
 
    </body>
 
