--- a/src/html_links/order.html
+++ b/src/html_links/order.html
@@ -14,6 +14,10 @@
             <li>shoes</li>
             <li>food</li>
             <li>boxers</li>
+
+            <img class="fit-picture"
+                 src=""
+                 alt="">
         </ul>
     </body>
 </html>
