--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -5,24 +5,24 @@
 
    </head>
 
-   <body>
+   <body style="background-color: rgb(205, 201, 234)">
 
       <h1>Ship Daddy</h1>
       <div style="text-align:center">
-         <a href="file:///C:\Projects\SHIP-DADDY\src\html_links\menu.html">MENU</a>
+         <a href="C:\project\SHIP-DADDY\src\html_links\menu.html">MENU</a>
       </div>
 
       <br>
 
       <div style="text-align:center">
-         <a href="file:///C:\Projects\SHIP-DADDY\src\html_links\order.html">ORDER</a>
+         <a href="C:\project\SHIP-DADDY\src\html_links\order.html">ORDER</a>
       </div>
 
 
       <br>
 
       <div style="text-align: center">
-         <a href="file:///C:\Projects\SHIP-DADDY\src\html_links\track.html">TRACK</a>
+         <a href="C:\project\SHIP-DADDY\src\html_links\track.html">TRACK</a>
       </div>
 
    </body>
