--- a/src/html_links/menu.html
+++ b/src/html_links/menu.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <body>
+    <body style="background-color: rgb(205, 201, 234)">
         <li>Shoes</li>
         <li>Food</li>
         <li>Shirt</li>
