--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -25,6 +25,13 @@
          <a href="C:\project\SHIP-DADDY\src\html_links\track.html">TRACK</a>
       </div>
 
+      <br>
+      <br>
+      <br>
+      <br>
+
+      <footer><small>Made by Mowgli</small></footer>
+
    </body>
 
 
