img needs servlet

--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -1,28 +1,50 @@
 <!DOCTYPE html>
 <html>
    <head>
-         <title>ShipDaddy.com</title>
+         <title>THE COURTIER</title>
 
    </head>
 
    <body style="background-color: rgb(205, 201, 234)">
 
-      <h1>Ship Daddy</h1>
+      <h1>THE COURTIER</h1>
+
+      <br>
+      <br>
+
+      <!--<video controls="controls" >
+         <source src="C:\Users\fksch\Desktop\Mina -  Il cielo in una stanza (Dolce & Gabbana Spot).mp4"
+         type="video/mp4" />
+      </video>-->
+
+      <img
+      src="file:///Users/projects/SHIP-DADDY/src/data/micheak-cine-fashione.PNG"
+      alt="Micheal-caine-foto"/>
+
+      <br>
+
+
       <div style="text-align:center">
-         <a href="C:\project\SHIP-DADDY\src\html_links\menu.html">MENU</a>
+         <button href="C:\project\SHIP-DADDY\src\html_links\menu.html">ABOUT US</button>
       </div>
 
       <br>
 
       <div style="text-align:center">
-         <a href="C:\project\SHIP-DADDY\src\html_links\order.html">ORDER</a>
+         <button href="C:\project\SHIP-DADDY\src\html_links\order.html">MENU</button>
       </div>
 
 
       <br>
 
       <div style="text-align: center">
-         <a href="C:\project\SHIP-DADDY\src\html_links\track.html">TRACK</a>
+         <button href="C:\project\SHIP-DADDY\src\html_links\track.html">RESERVATION</button>
+      </div>
+
+      <br>
+
+      <div style="text-align: center">
+         <button href="">CONTACT US</button>
       </div>
 
       <br>
