render image with express

--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -17,9 +17,13 @@
          type="video/mp4" />
       </video>-->
 
-      <img
-      src="file:///Users/projects/SHIP-DADDY/src/data/micheak-cine-fashione.PNG"
-      alt="Micheal-caine-foto"/>
+      <div id="main-content">
+
+         <img 
+         src="file:///C:\Users\projects\SHIP-DADDY\src\images\Bale.webp"   alt="Micheal-Bale-foto"/>
+
+
+      </div>
 
       <br>
 
