--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -12,18 +12,18 @@
       <br>
       <br>
 
-      <!--<video controls="controls" >
-         <source src="C:\Users\fksch\Desktop\Mina -  Il cielo in una stanza (Dolce & Gabbana Spot).mp4"
+      <video height="400" width="400" controls="controls" >
+         <source src="file:///C:\Users\projects\SHIP-DADDY\src\images\Mina -  Il cielo in una stanza (Dolce & Gabbana Spot).mp4"
+         
          type="video/mp4" />
-      </video>-->
+      </video>
 
-      <div id="main-content">
+      <!---div id="main-content">
 
-         <img 
-         src="file:///C:\Users\projects\SHIP-DADDY\src\images\Bale.webp"   alt="Micheal-Bale-foto"/>
+         <img src="file:///C:\Users\projects\SHIP-DADDY\src\images\Bale.webp"  height="400" width="400" alt="Micheal-Bale-foto"/>
 
 
-      </div>
+      </div--->
 
       <br>
 
