--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -12,23 +12,23 @@
       <br>
       <br>
 
-      <video height="400" width="400" controls="controls" >
+      <!---video height="400" width="400" controls="controls" >
          <source src="file:///C:\Users\projects\SHIP-DADDY\src\images\Mina -  Il cielo in una stanza (Dolce & Gabbana Spot).mp4"
          
          type="video/mp4" />
-      </video>
+      </video--->
 
-      <!---div id="main-content">
+      <div id="main-content">
 
-         <img src="file:///C:\Users\projects\SHIP-DADDY\src\images\Bale.webp"  height="400" width="400" alt="Micheal-Bale-foto"/>
+         <img src="src\images\Bane.jpg"  height="500" width="500" alt="Micheal-Bale-foto"/>
 
 
-      </div--->
+      </div>
 
       <br>
 
 
-      <div style="text-align:center">
+      <!--div style="text-align:center">
          <button href="C:\project\SHIP-DADDY\src\html_links\menu.html">ABOUT US</button>
       </div>
 
@@ -49,7 +49,7 @@
 
       <div style="text-align: center">
          <button href="">CONTACT US</button>
-      </div>
+      </div-->
 
       <br>
       <br>
