--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -20,7 +20,7 @@
 
       <div id="main-content">
 
-         <img src="src\images\Bane.jpg"  height="500" width="500" alt="Micheal-Bale-foto"/>
+         <img src="C:\Users\projects\SHIP-DADDY\src\images\Bane.jpg"  height="500" width="500" alt="Micheal-Bale-foto"/>
 
 
       </div>
