--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -26,6 +26,16 @@
       </div>
 
       <br>
+      <br>
+
+
+      <div>
+         <header>ABOUT US</header>
+      </div>
+
+      <div>
+         <title>CONTACT US</title>
+      </div>
 
 
       <!--div style="text-align:center">
