--- a/src/html_links/catalog.html
+++ b/src/html_links/catalog.html
@@ -2,9 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>ABOUT US</title>
+        <title>CATALOG</title>
     </head>
     <body style="background-color: rgb(205, 201, 234)">
-        <p>We make suits. </p>
+        <h1>COMING SOON!!</h1>
+        <p>COMING SOON! </p>
     </body>
 </html>
