--- a/src/html_links/contact.html
+++ b/src/html_links/contact.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>ABOUT US</title>
+        <title>CONTACT US</title>
     </head>
     <body style="background-color: rgb(205, 201, 234)">
-        <p>We make suits. </p>
+        <p> EMAIL = xyz@yahoo.com</p>
     </body>
 </html>
