--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -9,7 +9,11 @@
    
    <body style="background-color: rgb(205, 201, 234)">
 
-      <h1>THE COURTIER</h1>
+      <div style="text-align: center">
+
+         <h1>THE COURTIER</h1>
+
+      </div>
 
       <!--div id="main-content" class="image_block" >
 
