--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -15,12 +15,15 @@
 
       </div>
 
-      <!--div id="main-content" class="image_block" >
+      <br>
+      <br>
+
+      <div id="main-content" class="image_block" >
 
          <img src="./images/Bane.jpg"  height="500" width="400"  alt="Micheal-Bale-foto"/>
 
 
-      </div-->   
+      </div>   
 
       <!--div style="text-align: center">
 
@@ -65,7 +68,7 @@
       </div-->
 
       
-      <footer><small>Made by Mowgli</small></footer>
+      <!--footer><small>Made by Mowgli</small></footer-->
 
    </body>
 
