need-horiozontal-button-section

--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -18,9 +18,9 @@
       <br>
       <br>
 
-      <div id="main-content" class="image_block" >
+      <div id="main-content" style="image-rendering: auto" >
 
-         <img src="./images/Bane.jpg"  height="500" width="400"  alt="Micheal-Bale-foto"/>
+         <img src="./images/Bane.jpg" class="center" alt="Micheal-Bale-foto"/>
 
 
       </div>   
