--- a/src/html_links/about.html
+++ b/src/html_links/about.html
@@ -5,6 +5,24 @@
         <title>ABOUT US</title>
     </head>
     <body style="background-color: rgb(205, 201, 234)">
-        <p>We make suits. </p>
+        <h1>ABOUT US</h1>
+
+        <br>
+        <br>
+
+        <h2>An elegant dress can change one's personality; a beautiful attitude can change a 
+            person's life. 
+
+            <br>
+            <br>
+
+            Spezzatura- studied nonchalance: graceful conduct or performance without apparent
+            effort.
+
+            <br>
+            <br>
+            
+            The Courtier is a made to measure brand that focuses on bringing out the
+            spezzatura in you. </h2>
     </body>
 </html>
