--- a/src/html_links/contact.html
+++ b/src/html_links/contact.html
@@ -5,6 +5,7 @@
         <title>CONTACT US</title>
     </head>
     <body style="background-color: rgb(205, 201, 234)">
+        <h1> CONTACT US</h1>
         <p> EMAIL = xyz@yahoo.com</p>
     </body>
 </html>
