--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -10,66 +10,44 @@
    <body style="background-color: rgb(205, 201, 234)">
 
       <div style="text-align: center">
-
          <h1>THE COURTIER</h1>
-
       </div>
 
       <br>
       <br>
 
       <div id="main-content" style="image-rendering: auto" >
-
          <img src="./images/Bane.jpg" class="center" alt="Micheal-Bale-foto"/>
-
-
       </div>   
 
-      <!--div style="text-align: center">
+      <br>
+      <br>
 
+      <div style="text-align: center;">
          <button id="myButton">ABOUT US</button>
 
          <script type="text/javascript">
-                 document.getElementById("myButton").onclick = function () {
-                  location.href = "./html_links/about.html";
-                 };
+            document.getElementById("myButton").onclick= function(){
+               location.href = "./html_links/about.html"
+            }
          </script>
 
-      </div-->
-      
-
-      <br>
-
-      <!--div style="text-align:center">
-         <button id="Button-Catalog">CATALOG</button>
+         <button id="myButton">CATALOG</button>
 
          <script type="text/javascript">
-            document.getElementById("Button-Catalog").onclick = function (){
-               location.href = "./html_links/catalog.html";
-            };
+            document.getElementById("myButton").onclick = function(){
+               location.href = "./html_links/catalog.html"
+            }
          </script>
-      </div-->
 
-      <!---div style="text-align: center">
-         <button href="C:\project\SHIP-DADDY\src\html_links\track.html">RESERVATION</button>
-      </div--->
-
-      <br>
-
-      <!--div style="text-align: center">
-         <button id="Button-Contact">CONTACT US</button>
+         <button id="myButton">CONTACT US</button>
 
          <script type="text/javascript">
-            document.getElementById("Button-Contact").onclick = function() {
-               location.href = "./html_links/contact.html";
-            };
-
+            document.getElementById("myButton").onclick = function(){
+               location.href = "./html_links/contact.html"
+            }
          </script>
-      </div-->
-
-      
-      <!--footer><small>Made by Mowgli</small></footer-->
-
+      </div>
    </body>
 
 
