--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <link rel="stylesheet" type="text/css" href="./html_links/daddy.css">
+      <link rel="stylesheet" type="text/css" href="./css/daddy.css">
          <title>THE COURTIER</title>
 
    </head>
@@ -32,18 +32,18 @@
             }
          </script>
 
-         <button id="myButton">CATALOG</button>
+         <button id="myButt">CATALOG</button>
 
          <script type="text/javascript">
-            document.getElementById("myButton").onclick = function(){
+            document.getElementById("myButt").onclick = function(){
                location.href = "./html_links/catalog.html"
             }
          </script>
 
-         <button id="myButton">CONTACT US</button>
+         <button id="myButt1">CONTACT US</button>
 
          <script type="text/javascript">
-            document.getElementById("myButton").onclick = function(){
+            document.getElementById("myButt1").onclick = function(){
                location.href = "./html_links/contact.html"
             }
          </script>
