--- a/src/html_links/catalog.html
+++ b/src/html_links/catalog.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <title>CATALOG</title>
     </head>
-    <body style="background-color: rgb(205, 201, 234)">
-        <h1>COMING SOON!!</h1>
+    <body style="background-color: rgb(205, 201, 234); text-align: center;">
+        <h1>CATALOG</h1>
         <p>COMING SOON! </p>
     </body>
 </html>
