--- a/src/html_links/about.html
+++ b/src/html_links/about.html
@@ -5,12 +5,17 @@
         <title>ABOUT US</title>
     </head>
     <body style="background-color: rgb(205, 201, 234)">
-        <h1>ABOUT US</h1>
 
+        <div style="text-align: center;">
+            <h1>ABOUT US</h1>
+        </div>
+       
+        <br>
+        <br>
         <br>
         <br>
 
-        <h2>An elegant dress can change one's personality; a beautiful attitude can change a 
+        <h1>An elegant dress can change one's personality; a beautiful attitude can change a 
             person's life. 
 
             <br>
@@ -23,6 +28,6 @@
             <br>
             
             The Courtier is a made to measure brand that focuses on bringing out the
-            spezzatura in you. </h2>
+            spezzatura in you. </h1>
     </body>
 </html>
