--- a/src/html_links/contact.html
+++ b/src/html_links/contact.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+    <head style="text-align: center">
         <meta charset="UTF-8">
         <title>CONTACT US</title>
     </head>
+
     <body style="background-color: rgb(205, 201, 234)">
-        <h1> CONTACT US</h1>
-        <p> EMAIL = xyz@yahoo.com</p>
+        <div style="text-align: center">
+            <h1>CONTACT US</h1>
+         </div>
+         <div style="text-align: center">
+            <p> For appointment, consultation and queries, please contact:</p>
+
+        <p> Email: aaabedi@johnmarshall.edu</p> 
+
+         </div>   
     </body>
 </html>
