need to resize video

--- a/src/html_links/about.html
+++ b/src/html_links/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" type="video/mp4" href="../css/about.css">
         <meta charset="UTF-8">
         <title>ABOUT US</title>
     </head>
@@ -14,6 +15,10 @@
         <br>
         <br>
         <br>
+
+        <div id="video" class="frame">
+            <video controls src="../images/mina.mp4"></video>
+        </div>
 
         <h1>An elegant dress can change one's personality; a beautiful attitude can change a 
             person's life. 
