fix video issue

--- a/src/html_links/about.html
+++ b/src/html_links/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" type="video/mp4" href="../css/about.css">
+        <link rel="stylesheet" type="video/mp4" href="../css/daddy.css">
         <meta charset="UTF-8">
         <title>ABOUT US</title>
     </head>
@@ -10,14 +10,9 @@
         <div style="text-align: center;">
             <h1>ABOUT US</h1>
         </div>
-       
-        <br>
-        <br>
-        <br>
-        <br>
 
-        <div id="video" class="frame">
-            <video controls src="../images/mina.mp4"></video>
+        <div id="vidz" style="text-align: center;">
+            <video controls src="../images/mina.mp4" class="center" height="600px" width="800px" ></video>
         </div>
 
         <h1>An elegant dress can change one's personality; a beautiful attitude can change a 
