--- a/src/html_links/about.html
+++ b/src/html_links/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" type="video/mp4" href="../css/daddy.css">
+        <!--link rel="stylesheet" type="video/mp4" href="../css/daddy.css"-->
         <meta charset="UTF-8">
         <title>ABOUT US</title>
     </head>
