feat: add reservation

--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -46,7 +46,22 @@
                location.href = "./html_links/contact.html"
             }
          </script>
+
+         <button id="myButt2">RESERVATION</button>
+
+         <script type="text/javascript">
+            document.getElementById("myButt2").onclick = function(){
+               location.href = "./html_links/reservation.html"
+            }
+         </script>
          
+         <button id="myButt3">QUOTES</button>
+
+         <script type="text/javascript">
+            document.getElementById("myButt3").onclick = function(){
+               location.href = "./html_links/quotes.html"
+            }
+         </script>
       </div>
    </body>
 
