feat:add quotes page

--- a/src/html_links/quotes.html
+++ b/src/html_links/quotes.html
@@ -5,6 +5,15 @@
     </head>
     <body style="background-color: rgb(205, 201, 234); text-align: center;">
         <h1>QUOTES</h1>
-        <p>COMING SOON! </p>
+        <ul>
+            <li>My father never played tennis in his 
+                life, but he did ride down Grand Canyon astride a mule in a three-piece pin-stripe suit. ~ Marina Whitman</li>
+            <br>
+            <li>Suit is what makes a man. ~ Anonymous</li>
+            <br>
+            <li>The suits too small on this fatso. ~The Sopranos</li>
+            <br>
+            <li>A well-tailored suit is to women what lingerie is to men. ~ Anonymous</li>
+        </ul>
     </body>
 </html>
