upate:make changes to reservation

--- a/src/html_links/catalog.html
+++ b/src/html_links/catalog.html
@@ -6,6 +6,6 @@
     </head>
     <body style="background-color: rgb(205, 201, 234); text-align: center;">
         <h1>CATALOG</h1>
-        <p>COMING SOON! </p>
+        <p>**THIS PAGE IS IN PROGRESS** </p>
     </body>
 </html>
