--- a/src/html_links/quotes.html
+++ b/src/html_links/quotes.html
@@ -11,7 +11,7 @@
             <br>
             <li>Suit is what makes a man. ~ Anonymous</li>
             <br>
-            <li>The suits too small on this fatso. ~The Sopranos</li>
+            <li>Sometimes if you wear suits too long, it changes your ideology. ~ Joe Slovo</li>
             <br>
             <li>A well-tailored suit is to women what lingerie is to men. ~ Anonymous</li>
         </ul>
