catalog-img-not-work

--- a/src/html_links/catalog.html
+++ b/src/html_links/catalog.html
@@ -7,5 +7,9 @@
     <body style="background-color: rgb(205, 201, 234); text-align: center;">
         <h1>CATALOG</h1>
         <p>**THIS PAGE IS IN PROGRESS** </p>
+        <!--Why is this image shit not working...fuck-->
+        <div id="pre-content" style="image-rendering: auto">
+            <img src="./images/sopranos.jpg" alt="Soprano-foto">
+        </div>
     </body>
 </html>
