--- a/src/html_links/contact.html
+++ b/src/html_links/contact.html
@@ -9,11 +9,6 @@
         <div style="text-align: center">
             <h1>CONTACT US</h1>
          </div>
-         <div style="text-align: center">
-            <p> For appointment, consultation and queries, please contact:</p>
-
-        <p> Email: aaabedi@johnmarshall.edu</p> 
-
-         </div>   
+           <!--Title,Name,Message, [submit-button]-->
     </body>
 </html>
