--- a/src/html_links/catalog.html
+++ b/src/html_links/catalog.html
@@ -8,7 +8,7 @@
         <h1>CATALOG</h1>
         <p>**THIS PAGE IS IN PROGRESS** </p>
         <!--Why is this image shit not working...fuck-->
-        <div id="pre-content" style="image-rendering: auto">
+        <div id="soup-image" style="image-rendering: auto">
             <img src="./images/sopranos.jpg" alt="Soprano-foto">
         </div>
     </body>
