--- a/src/html_links/about.html
+++ b/src/html_links/about.html
@@ -12,7 +12,7 @@
         </div>
 
         <div id="vidz" style="text-align: center;">
-            <video controls src="../images/mina.mp4" class="center" height="600px" width="800px" ></video>
+            <video autoplay src="../images/mina.mp4" class="center" height="600px" width="800px" ></video>
         </div>
 
         <h1>An elegant dress can change one's personality; a beautiful attitude can change a 
