single page site

--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -15,43 +15,49 @@
       <br>
       <br>
 
-      <div id="main-content" style="image-rendering: auto" >
+      <div id="vidz" style="text-align: center;">
+         <video autoplay controls src="../images/mina.mp4" class="center" height="1000px" width="1000px" ></video>
+     </div>
+
+      <!--div id="main-content" style="image-rendering: auto" >
          <img src="./images/Bane.jpg" class="center" alt="Micheal-Bale-foto"/>
-      </div>   
+      </div-->   
 
       <br>
       <br>
+
+      <h1>An elegant dress can change one's personality; a beautiful attitude can change a 
+         person's life. 
+
+         <br>
+         <br>
+
+         Spezzatura- studied nonchalance: graceful conduct or performance without apparent
+         effort.
+
+         <br>
+         <br>
+         
+         The Courtier is a made to measure brand that focuses on bringing out the
+         spezzatura in you. </h1>
+
+         <br>
+         <br>
+
+         <div id="main-content" style="image-rendering: auto" >
+         <img src="./images/Bane.jpg" class="center" alt="Micheal-Bale-foto"/>
+      </div> 
+
+      <br>
+      <br>
+
 
       <div style="text-align: center;">
-         <button id="myButton">ABOUT US</button>
+         <button id="myButton">MAKE APPOINTMENT</button>
 
          <script type="text/javascript">
             document.getElementById("myButton").onclick= function(){
-               location.href = "./html_links/about.html"
-            }
-         </script>
-
-         <button id="myButt">CATALOG</button>
-
-         <script type="text/javascript">
-            document.getElementById("myButt").onclick = function(){
-               location.href = "./html_links/catalog.html"
-            }
-         </script>
-
-         <button id="myButt2">RESERVATION</button>
-
-         <script type="text/javascript">
-            document.getElementById("myButt2").onclick = function(){
                location.href = "./html_links/reservation.html"
-            }
-         </script>
-         
-         <button id="myButt3">QUOTES</button>
-
-         <script type="text/javascript">
-            document.getElementById("myButt3").onclick = function(){
-               location.href = "./html_links/quotes.html"
             }
          </script>
       </div>
