--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -16,7 +16,7 @@
       <br>
 
       <div id="vidz" style="text-align: center;">
-         <video autoplay controls src="../images/mina.mp4" class="center" height="1000px" width="1000px" ></video>
+         <video autoplay controls src="../images/mina.mp4" class="center" ></video>
      </div>
 
       <br>
@@ -57,6 +57,18 @@
             }
          </script>
       </div>
+
+      <br>
+      <br>
+
+      <div>
+         <h2>STORE LOCATION</h2>
+
+      </div>
+
+      <footer>
+         Created by Mogul.
+      </footer>
 
 
    </body>
