--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -15,8 +15,8 @@
       <br>
       <br>
 
-      <div id="vidz" style="text-align: center;">
-         <video autoplay controls src="../images/mina.mp4" class="center" ></video>
+      <div id="video" style="text-align: center;">
+         <video controls src="../images/mina.mp4" class="center" ></video>
      </div>
 
       <br>
