update: minor changes

--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -8,6 +8,8 @@
    
    <body style="background-color: rgb(205, 201, 234)">
 
+      <!--script src="https://gist.github.com/abdurrahmanekr/2747d704edec93a06e454eba2653e0df.js"></script-->
+
       <div style="text-align: center">
          <h1>THE COURTIER</h1>
       </div>
@@ -64,7 +66,15 @@
       <div>
          <h2>STORE LOCATION</h2>
 
+         <iframe>
+            src="3100 River Exchange Dr, Norcross, GA 30092"
+         </iframe>
+
       </div>
+
+      <br>
+      <br>
+      
 
       <footer>
          Created by Mogul.
