--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -18,7 +18,7 @@
       <br>
 
       <div id="video" style="text-align: center;">
-         <video controls src="../images/mina.mp4" class="center" ></video>
+         <video controls autoplay src="../images/mina.mp4" class="center" ></video>
      </div>
 
       <br>
@@ -66,15 +66,15 @@
       <div>
          <h2>STORE LOCATION</h2>
 
-         <iframe>
-            src="3100 River Exchange Dr, Norcross, GA 30092"
-         </iframe>
+         <iframe
+            title="The Courtier Office"
+            src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAioFi2dEKIfCLG0UU5eriOVXuk1Sd38RA&q=KSU Lawrence V. Johnson Library"></iframe>
 
       </div>
 
       <br>
       <br>
-      
+
 
       <footer>
          Created by Mogul.
