major changes to make

--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -68,7 +68,7 @@
 
          <iframe
             title="The Courtier Office"
-            src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAioFi2dEKIfCLG0UU5eriOVXuk1Sd38RA&q=KSU Lawrence V. Johnson Library"></iframe>
+            src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAioFi2dEKIfCLG0UU5eriOVXuk1Sd38RA&q=600 W Peachtree St NW, Atlanta, GA 30308"></iframe>
 
       </div>
 
