--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -5,8 +5,9 @@
          <title>THE COURTIER</title>
    </head>
 
+   <!--add another background-->
    
-   <body style="background-color: rgb(205, 201, 234)">
+   <body style="background-color: rgba(70, 172, 131, 0.568)">
 
       <div style="text-align: center">
          <h1>THE COURTIER</h1>
