--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -7,8 +7,9 @@
 
    <!--add another background-->
    
-   <body style="background-color: rgba(70, 172, 131, 0.568)">
+   <body class="block">
 
+      
       <div style="text-align: center">
          <h1>THE COURTIER</h1>
       </div>
