--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -50,7 +50,7 @@
       <br>
 
 
-      <div style="text-align: center;">
+      <div style="text-align: center;" class="button">
          <button id="myButton">MAKE APPOINTMENT</button>
 
          <script type="text/javascript">
