IP: navbar with menu items

--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -14,6 +14,12 @@
          <h1>THE COURTIER</h1>
       </div>
 
+      <nav class="menubar">
+         <li>menu</li>
+         <li>appointment</li>
+         <li>cart</li>
+      </nav>
+
       <br>
       <br>
 
