still fix the navbar

--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -14,9 +14,9 @@
          <h1>THE COURTIER</h1>
       </div>
 
-      <nav class="menubar">
+      <nav class="navbar">
          <li>menu</li>
-         <li>appointment</li>
+         <li>name</li>
          <li>cart</li>
       </nav>
 
