--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -80,11 +80,16 @@
 
       <br>
       <br>
+      <br>
+      <br>
+      <br>
 
-
-      <footer>
-         Created by Mogul.
-      </footer>
+      <div class="footer">
+           <p>
+            This is a test version of the website.
+            Version 2.0 is coming soon!!!
+           </p>
+      </div>
 
 
    </body>
