--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -12,6 +12,7 @@
       
       <div style="text-align: center">
          <h1>THE COURTIER</h1>
+         <h2>San Antonio</h2>
       </div>
 
       <nav class="navbar">
