--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -10,15 +10,15 @@
    <body class="block">
 
       
-      <div style="text-align: center">
+      <div style="text-align: center; background-color: brown;">
          <h1>THE COURTIER</h1>
       </div>
 
-      <nav class="navbar">
+      <!--nav class="navbar">
          <li>menu</li>
          <li>name</li>
          <li>cart</li>
-      </nav>
+      </nav-->
 
       <br>
       <br>
