--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -14,11 +14,7 @@
          <h1>THE COURTIER</h1>
       </div>
 
-      <!--nav class="navbar">
-         <li>menu</li>
-         <li>name</li>
-         <li>cart</li>
-      </nav-->
+      
 
       <br>
       <br>
@@ -26,6 +22,25 @@
       <div id="video" style="text-align: center;">
          <video controls autoplay src="../images/mina.mp4" class="center" ></video>
      </div>
+
+     <br>
+     <br>
+
+
+     <div>
+      <nav class="navbar">
+         <li><button>menu</button></li>
+         <li><button>name</button></li>
+         <li><button>cart</button></li>
+      </nav>
+
+     </div>
+     
+     <br>
+     <br>
+     <br>
+     <br>
+
 
       <br>
       <br>
