--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -9,6 +9,11 @@
    
    <body class="block">
 
+      <div style="background-color: seashell;">
+         <h3>cart and sign in image here!!</h3>
+
+      </div>
+
       
       <div style="text-align: center; background-color: brown;">
          <h1>THE COURTIER</h1>
