--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -10,7 +10,7 @@
    <body class="block">
 
       <div style="background-color: seashell;">
-         <h3>cart and sign in image here!!</h3>
+         <h3>cart and agent logo</h3>
 
       </div>
 
