--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -10,7 +10,9 @@
    <body class="block">
 
       <div style="background-color: seashell;">
-         <h3>cart and agent logo</h3>
+         <h3>Welcome!! This is where pimps be pimpin and hoes be stripping.</h3>
+         <img src="./images/cart.PNG" class="dickpics" alt="cart-foto"/>
+         <img src="./images/user-icon.PNG" class="dickpics"/>
 
       </div>
 
