--- a/src/html_links/daddy.html
+++ b/src/html_links/daddy.html
@@ -9,8 +9,7 @@
    
    <body class="block">
 
-      <div style="background-color: seashell;">
-         <h3>Welcome!! This is where pimps be pimpin and hoes be stripping.</h3>
+      <div style="background-color: seashell;" class="imaganitor">
          <img src="./images/cart.PNG" class="dickpics" alt="cart-foto"/>
          <img src="./images/user-icon.PNG" class="dickpics"/>
 
